--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .DS_Store
-node_modules/
-dist/
-npm-debug.log
-yarn-error.log
+
 
 # Editor directories and files
 .idea
@@ -10,3 +7,4 @@ yarn-error.log
 *.ntvs*
 *.njsproj
 *.sln
+node_modules
